[gd_scene load_steps=16 format=3 uid="uid://tulgf6ok78fw"]

[ext_resource type="Script" path="res://scenes/ship_designer/ship_baker_full.gd" id="1_hhwno"]
[ext_resource type="Texture2D" uid="uid://cpb4bjm46s1nn" path="res://assets/my/ship_o1/style_2.png" id="2_ba0lr"]
[ext_resource type="Texture2D" uid="uid://cptyhxa6dxk7y" path="res://assets/my/ship_o1/hull_1.PNG" id="3_qc2ot"]
[ext_resource type="Texture2D" uid="uid://bdjs7ywlspykf" path="res://assets/my/ship_o1/cocpit_2.PNG" id="3_uq2e6"]
[ext_resource type="Texture2D" uid="uid://b24hdrylbyydo" path="res://assets/my/ship_o1/engine_1.PNG" id="5_6acxf"]
[ext_resource type="Texture2D" uid="uid://dmhv48ebm52oe" path="res://assets/my/ship_o1/cocpit_2_mask.PNG" id="6_3d76j"]
[ext_resource type="Texture2D" uid="uid://c6b8pehpj46wl" path="res://assets/my/ship_o1/hull_1_mask.PNG" id="7_6b4dx"]
[ext_resource type="Texture2D" uid="uid://cje3ohukt7y80" path="res://assets/my/ship_o1/hull_2_emission.PNG" id="8_och8f"]
[ext_resource type="Texture2D" uid="uid://b1div50ru5c4l" path="res://assets/my/ship_o1/cocpit_2_emission.PNG" id="9_1u10f"]
[ext_resource type="Texture2D" uid="uid://c1lcwnb6nwet2" path="res://assets/my/ship_o1/engine_1_mask.PNG" id="10_jxp3s"]
[ext_resource type="Texture2D" uid="uid://ccx0ijow6dnjd" path="res://assets/my/ship_o1/engine_1_emission.PNG" id="11_cymfq"]

[sub_resource type="Shader" id="Shader_8fl5i"]
code = "shader_type canvas_item;

uniform sampler2D mask_texture : hint_default_transparent;
uniform sampler2D style_texture : hint_default_transparent;

void fragment() {
	vec4 ship_color = texture(TEXTURE, UV);
	vec4 style_color = texture(style_texture, UV);
	vec4 mask_value = texture(mask_texture, UV);
	if (mask_value.r > 0.0) {
		COLOR = ship_color * style_color * mask_value.r;
	} else {
		COLOR = ship_color;
	}
}"
metadata/_edit_res_path = "res://scenes/ship_designer/baker.tscn::Shader_8fl5i"

[sub_resource type="ViewportTexture" id="ViewportTexture_41lrd"]
viewport_path = NodePath("Control/HBoxContainer/SubViewportContainer2/MaskBaker")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sayty"]
shader = SubResource("Shader_8fl5i")
shader_parameter/mask_texture = SubResource("ViewportTexture_41lrd")
shader_parameter/style_texture = ExtResource("2_ba0lr")

[sub_resource type="ViewportTexture" id="ViewportTexture_iix8v"]
viewport_path = NodePath("Control/HBoxContainer/SubViewportContainer/BaseBaker")

[node name="Baker" type="Node"]
script = ExtResource("1_hhwno")
filename = "16"
style = ExtResource("2_ba0lr")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SubViewportContainer" type="SubViewportContainer" parent="Control/HBoxContainer"]
layout_mode = 2

[node name="BaseBaker" type="SubViewport" parent="Control/HBoxContainer/SubViewportContainer"]
unique_name_in_owner = true
transparent_bg = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(32, 64)
render_target_update_mode = 4

[node name="CanvasLayer" type="CanvasLayer" parent="Control/HBoxContainer/SubViewportContainer/BaseBaker"]

[node name="hull_view" type="Node2D" parent="Control/HBoxContainer/SubViewportContainer/BaseBaker/CanvasLayer"]
position = Vector2(16, 32)

[node name="hull" type="Sprite2D" parent="Control/HBoxContainer/SubViewportContainer/BaseBaker/CanvasLayer/hull_view"]
texture = ExtResource("3_qc2ot")

[node name="cocpit" type="Sprite2D" parent="Control/HBoxContainer/SubViewportContainer/BaseBaker/CanvasLayer/hull_view"]
position = Vector2(0, -16)
texture = ExtResource("3_uq2e6")

[node name="engine" type="Sprite2D" parent="Control/HBoxContainer/SubViewportContainer/BaseBaker/CanvasLayer/hull_view"]
position = Vector2(0, 16)
texture = ExtResource("5_6acxf")

[node name="engine2" type="Sprite2D" parent="Control/HBoxContainer/SubViewportContainer/BaseBaker/CanvasLayer/hull_view"]
visible = false
position = Vector2(8, 16)
texture = ExtResource("5_6acxf")

[node name="SubViewportContainer2" type="SubViewportContainer" parent="Control/HBoxContainer"]
layout_mode = 2

[node name="MaskBaker" type="SubViewport" parent="Control/HBoxContainer/SubViewportContainer2"]
unique_name_in_owner = true
transparent_bg = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(32, 64)
render_target_update_mode = 4

[node name="CanvasLayer" type="CanvasLayer" parent="Control/HBoxContainer/SubViewportContainer2/MaskBaker"]

[node name="mask_view" type="Node2D" parent="Control/HBoxContainer/SubViewportContainer2/MaskBaker/CanvasLayer"]
texture_filter = 1
position = Vector2(16, 32)

[node name="hull" type="Sprite2D" parent="Control/HBoxContainer/SubViewportContainer2/MaskBaker/CanvasLayer/mask_view"]
texture = ExtResource("7_6b4dx")

[node name="cocpit" type="Sprite2D" parent="Control/HBoxContainer/SubViewportContainer2/MaskBaker/CanvasLayer/mask_view"]
position = Vector2(0, -16)
texture = ExtResource("6_3d76j")

[node name="engine" type="Sprite2D" parent="Control/HBoxContainer/SubViewportContainer2/MaskBaker/CanvasLayer/mask_view"]
position = Vector2(0, 16)
texture = ExtResource("10_jxp3s")

[node name="engine2" type="Sprite2D" parent="Control/HBoxContainer/SubViewportContainer2/MaskBaker/CanvasLayer/mask_view"]
visible = false
position = Vector2(8, 16)
texture = ExtResource("10_jxp3s")

[node name="SubViewportContainer3" type="SubViewportContainer" parent="Control/HBoxContainer"]
layout_mode = 2

[node name="EmissionBaker" type="SubViewport" parent="Control/HBoxContainer/SubViewportContainer3"]
unique_name_in_owner = true
transparent_bg = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(32, 64)
render_target_clear_mode = 1
render_target_update_mode = 4

[node name="CanvasLayer" type="CanvasLayer" parent="Control/HBoxContainer/SubViewportContainer3/EmissionBaker"]

[node name="mask_view" type="Node2D" parent="Control/HBoxContainer/SubViewportContainer3/EmissionBaker/CanvasLayer"]
texture_filter = 1
position = Vector2(16, 32)

[node name="hull" type="Sprite2D" parent="Control/HBoxContainer/SubViewportContainer3/EmissionBaker/CanvasLayer/mask_view"]
texture = ExtResource("8_och8f")

[node name="cocpit" type="Sprite2D" parent="Control/HBoxContainer/SubViewportContainer3/EmissionBaker/CanvasLayer/mask_view"]
position = Vector2(0, -16)
texture = ExtResource("9_1u10f")

[node name="engine" type="Sprite2D" parent="Control/HBoxContainer/SubViewportContainer3/EmissionBaker/CanvasLayer/mask_view"]
position = Vector2(0, 16)
texture = ExtResource("11_cymfq")

[node name="engine2" type="Sprite2D" parent="Control/HBoxContainer/SubViewportContainer3/EmissionBaker/CanvasLayer/mask_view"]
visible = false
position = Vector2(8, 16)
texture = ExtResource("11_cymfq")

[node name="SubViewportContainer4" type="SubViewportContainer" parent="Control/HBoxContainer"]
layout_mode = 2

[node name="Stylizator" type="SubViewport" parent="Control/HBoxContainer/SubViewportContainer4"]
unique_name_in_owner = true
transparent_bg = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(32, 64)
render_target_update_mode = 4

[node name="CanvasLayer" type="CanvasLayer" parent="Control/HBoxContainer/SubViewportContainer4/Stylizator"]

[node name="ShipStylization" type="Node2D" parent="Control/HBoxContainer/SubViewportContainer4/Stylizator/CanvasLayer"]
position = Vector2(16, 32)

[node name="StylizatorView" type="Sprite2D" parent="Control/HBoxContainer/SubViewportContainer4/Stylizator/CanvasLayer/ShipStylization"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_sayty")
texture = SubResource("ViewportTexture_iix8v")
